add docs categories and commons files
